--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -1,10 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @idea.description %>
-</p>
+<div class="col-md-offset-2 col-md-8"><h1><small><strong><%=@idea.user.name%></strong> proposes: </small><%= @idea.description %></h1></div>
 
+<br>
+<br>
 <%= render partial: "comments/comments", locals: {commentable: @idea} %>
 <%= render partial: "comments/form", locals: {commentable: @idea} %>
 
